Primeira versão final com mobile

--- a/index.html
+++ b/index.html
@@ -99,42 +99,44 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul id="nav-mobile" class="menu right hide-on-med-and-down">
-                    <li data-menuanchor="home">
+                    <li data-menuanchor="home" class="sidenav-close">
                         <a href="#home">Home</a>
                     </li>
-                    <li data-menuanchor="sobre">
+                    <li data-menuanchor="sobre" class="sidenav-close">
                         <a href="#sobre">Sobre mim</a>
                     </li>
-                    <li data-menuanchor="servicos">
+                    <li data-menuanchor="servicos" class="sidenav-close">
                         <a href="#servicos">Serviços</a>
                     </li>
-                    <li data-menuanchor="fale_comigo">
+                    <li data-menuanchor="fale_comigo" class="sidenav-close">
                         <a href="#fale_comigo">Fale comigo</a>
                     </li>
                     <li>
-                        <a href="https://whereby.com/simonerego"
-                            >Atendimento Online</a
-                        >
+                        <a href="https://whereby.com/simonerego">
+                            Atendimento Online
+                        </a>
                     </li>
                 </ul>
             </div>
         </nav>
         <ul class="menu sidenav" id="mobile-demo">
-            <li data-menuanchor="home">
+            <li data-menuanchor="home" class="sidenav-close">
                 <a href="#home">Home</a>
             </li>
-            <li data-menuanchor="sobre">
+            <li data-menuanchor="sobre" class="sidenav-close">
                 <a href="#sobre">Sobre mim</a>
             </li>
-            <li data-menuanchor="servicos">
+            <li data-menuanchor="servicos" class="sidenav-close">
                 <a href="#servicos">Serviços</a>
             </li>
-            <li data-menuanchor="fale_comigo">
+            <li data-menuanchor="fale_comigo" class="sidenav-close">
                 <a href="#fale_comigo">Fale comigo</a>
             </li>
             <li>
-                <a href="https://whereby.com/simonerego">Atendimento Online</a>
-            </li>
+                <a href="https://whereby.com/simonerego">
+                    Atendimento Online
+                </a>
+            </li>   
         </ul>
 
         <div id="pagepiling">
@@ -142,7 +144,7 @@
                 <div class="row container valign-wrapper">
                     
                     <div class="col m6 s12">
-                        <h3>Olá, sou Simone Rêgo</h3>
+                        <h3 class="no-margin-top">Olá, sou Simone Rêgo</h3>
                         <p>
                             Durante minha vida, tracei várias metas, objetivos e
                             estratégias, que me levariam a realizar meus sonhos
@@ -154,7 +156,7 @@
                             graduações, uma por sobrevivência e a outra por
                             amor.
                         </p>
-                        <p>
+                        <p class="hide-on-small-and-down">
                             Caminhei com as duas ao longo dos anos. Trabalhei em
                             empresas nacionais e multinacionais. Fui do nível
                             operacional, estratégico e tático. Por onde passei,
@@ -162,7 +164,7 @@
                             desenvolver minhas habilidades, saberes e
                             especializar-me.
                         </p>
-                        <p>
+                        <p class="hide-on-small-and-down">
                             Essa trajetória me trouxe a um novo desafio. Fechar
                             um ciclo que era sólido, confortável e seguro aos
                             meus olhos. Estar distante dos familiares e amigos,
@@ -188,7 +190,7 @@
                     </div>
                     <div class="col m6 s12">
                         <div class="card-panel bg-primaria text-secundaria">
-                            <h3>Sobre mim</h3>
+                            <h3 class="no-margin-top">Sobre mim</h3>
                             <p>
                                 Sou Simone Rêgo, Psicóloga especialista em
                                 terapia familiar e de casais. Atualmente realizo
@@ -208,7 +210,7 @@
             </div>
             <div class="section pp-scrollable valign-wrapper" id="servicos">
                 <div class="row container valign-wrapper">
-                    <div class="col m6 s12">
+                    <div class="col m6 s12 center-align">
                         <img
                             src="assets/img/simone_servicos.jpg"
                             alt="Simone Rêgo"
@@ -217,7 +219,7 @@
                     </div>
                     <div class="col m6 s12">
                         <div class="card-panel bg-primaria text-secundaria">
-                            <h3>Serviços</h3>
+                            <h3 class="no-margin-top">Serviços</h3>
                             <p>
                                 Atuo na modalidade online, com sessões com duração de 50 
                                 minutos. Sempre com hora marcada. Atendo clientes 
@@ -235,12 +237,12 @@
             </div>
             <div class="section pp-scrollable valign-wrapper" id="fale_comigo">
                 <div class="row container valign-wrapper">
-                    <div class="col m6 s12">
+                    <div class="col m6 s12 hide-on-med-and-down">
                         &nbsp;
                     </div>
                     <div class="col m6 s12">
                         <div class="card-panel">
-                            <h3>Fale comigo</h3>
+                            <h3 class="no-margin-top">Fale comigo</h3>
                             <p>
                                 Conheça meus canais de comunicação:
                             </p>
