Ajustando o número do CRP

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <img src="assets/img/favicon.png" alt="Logo" class="left" />
                     <div>
                         <h1>Simone Rêgo - Psicóloga</h1>
-                        <h2>CRP 06/178107</h2>
+                        <h2>CRP 01/29897 - DF</h2>
                     </div>
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger">
